--- a/css/plugins.css
+++ b/css/plugins.css
@@ -1875,14 +1875,14 @@ table {
           flex: 1 1 auto !important;
 }
 
-.flex-row {
+/* .flex-row {
   -webkit-box-orient: horizontal !important;
   -webkit-box-direction: normal !important;
      -moz-box-orient: horizontal !important;
      -moz-box-direction: normal !important;
       -ms-flex-direction: row !important;
           flex-direction: row !important;
-}
+} */
 
 .flex-column {
   -webkit-box-orient: vertical !important;
@@ -7373,14 +7373,14 @@ table {
           flex: 1 1 auto !important;
 }
 
-.flex-row {
+/* .flex-row {
   -webkit-box-orient: horizontal !important;
   -webkit-box-direction: normal !important;
      -moz-box-orient: horizontal !important;
      -moz-box-direction: normal !important;
       -ms-flex-direction: row !important;
           flex-direction: row !important;
-}
+} */
 
 .flex-column {
   -webkit-box-orient: vertical !important;
